inges-test/serivce-.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service-ingress
spec:
  selector:
    app: nginx-test
  type: ClusterIP
  ports:
  - name: nginx
    protocol: TCP
    port: 80
    targetPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: httpd-service-ingress
spec:
  selector:
    app: httpd
  type: ClusterIP
  ports:
  - name: httpd
    protocol: TCP
    port: 80
    targetPort: 80
